--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -202,7 +202,9 @@
 
                                 <div class="dropdown-menu inline-dropdown" role="menu">
                                     <div class="panel-body" role="form">
-                                        <ul data-resource-id="{{ res.short_id }}" class="list-group list-labels">
+                                        <ul data-resource-id="{{ res.short_id }}"
+                                            data-initial-labels="{% for label in res.labels %}{% if forloop.counter0 > 0 %},{% endif %}{{ label }}{% endfor %}"
+                                            class="list-group list-labels">
 
                                         </ul>
                                     </div>
@@ -264,13 +266,39 @@
                     {% for res in editable %}
                         <tr>
                             <td>
-                                <input class="row-selector" type="checkbox" aria-label="...">
-                                <span class="glyphicon glyphicon-star btn-inline-favorite"></span>
+                                <input class="row-selector" type="checkbox">
+                                {% if res.is_favorite %}
+                                    <span data-form-id="form-favorite-{{ res.short_id }}" data-form-type="toggle-favorite"
+                                          class="glyphicon glyphicon-star btn-inline-favorite isfavorite"></span>
+
+                                    <form class="hidden-form" id="form-favorite-{{ res.short_id }}"
+                                          action="/hsapi/_internal/{{ res.short_id }}/label-resource-action/"
+                                          method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="action" value="DELETE">
+                                        <input type="hidden" name="label_type" value="FAVORITE">
+                                    </form>
+                                {% else %}
+                                    <span data-form-id="form-favorite-{{ res.short_id }}" data-form-type="toggle-favorite"
+                                          class="glyphicon glyphicon-star btn-inline-favorite"></span>
+
+                                    <form class="hidden-form" id="form-favorite-{{ res.short_id }}"
+                                          action="/hsapi/_internal/{{ res.short_id }}/label-resource-action/"
+                                          method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="action" value="CREATE">
+                                        <input type="hidden" name="label_type" value="FAVORITE">
+                                    </form>
+                                {% endif %}
+
                                 <span class="glyphicon glyphicon-tag btn-inline-label" data-toggle="dropdown" aria-expanded="false"></span>
 
                                 <div class="dropdown-menu inline-dropdown" role="menu">
                                     <div class="panel-body" role="form">
-                                        <ul class="list-group list-labels">
+                                        <ul data-resource-id="{{ res.short_id }}"
+                                            data-initial-labels="{% for label in res.labels %}{% if forloop.counter0 > 0 %},{% endif %}{{ label }}{% endfor %}"
+                                            class="list-group list-labels">
+
                                         </ul>
                                     </div>
                                 </div>
@@ -304,11 +332,10 @@
                                 {% endif %}
                             </td>
                             <td><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></td>
-                            {% if res.first_creator.description %}
-                                <td><a href="{{ res.first_creator.description }}">{{ res.first_creator.name  }}</a></td>
-                            {% else %}
-                                <td>{{ res.first_creator.name }}</td>
-                            {% endif %}
+                            <td>{% for owner in res.raccess.owners.all %}
+                                  {% if forloop.counter0 > 0 %} · {% endif %}
+                                <span>{{ owner|contact|safe }}</span>
+                            {% endfor %}</td>
                             <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
                             <td>
                                 {% for kw in res.metadata.subjects.all %}
@@ -332,18 +359,42 @@
                     {% for res in view %}
                         <tr>
                             <td>
-                                <input class="row-selector" type="checkbox" aria-label="...">
-                                <span class="glyphicon glyphicon-star btn-inline-favorite"></span>
-                                <span class="glyphicon glyphicon-tag btn-inline-label" data-toggle="dropdown"
-                                      aria-expanded="false"></span>
+                                <input class="row-selector" type="checkbox">
+                                {% if res.is_favorite %}
+                                    <span data-form-id="form-favorite-{{ res.short_id }}" data-form-type="toggle-favorite"
+                                          class="glyphicon glyphicon-star btn-inline-favorite isfavorite"></span>
+
+                                    <form class="hidden-form" id="form-favorite-{{ res.short_id }}"
+                                          action="/hsapi/_internal/{{ res.short_id }}/label-resource-action/"
+                                          method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="action" value="DELETE">
+                                        <input type="hidden" name="label_type" value="FAVORITE">
+                                    </form>
+                                {% else %}
+                                    <span data-form-id="form-favorite-{{ res.short_id }}" data-form-type="toggle-favorite"
+                                          class="glyphicon glyphicon-star btn-inline-favorite"></span>
+
+                                    <form class="hidden-form" id="form-favorite-{{ res.short_id }}"
+                                          action="/hsapi/_internal/{{ res.short_id }}/label-resource-action/"
+                                          method="post">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="action" value="CREATE">
+                                        <input type="hidden" name="label_type" value="FAVORITE">
+                                    </form>
+                                {% endif %}
+
+                                <span class="glyphicon glyphicon-tag btn-inline-label" data-toggle="dropdown" aria-expanded="false"></span>
 
                                 <div class="dropdown-menu inline-dropdown" role="menu">
                                     <div class="panel-body" role="form">
-                                        <ul class="list-group list-labels">
+                                        <ul data-resource-id="{{ res.short_id }}"
+                                            data-initial-labels="{% for label in res.labels %}{% if forloop.counter0 > 0 %},{% endif %}{{ label }}{% endfor %}"
+                                            class="list-group list-labels">
+
                                         </ul>
                                     </div>
                                 </div>
-
                             </td>
                             <td>
                                 <span class="resource-type-text">{{ res|resource_type }}</span>
@@ -374,11 +425,10 @@
                                 {% endif %}
                             </td>
                             <td><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></td>
-                            {% if res.first_creator.description %}
-                                <td><a href="{{ res.first_creator.description }}">{{ res.first_creator.name }}</a></td>
-                            {% else %}
-                                <td>{{ res.first_creator.name }}</td>
-                            {% endif %}
+                            <td>{% for owner in res.raccess.owners.all %}
+                                  {% if forloop.counter0 > 0 %} · {% endif %}
+                                <span>{{ owner|contact|safe }}</span>
+                            {% endfor %}</td>
                             <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
                             <td>
                                 {% for kw in res.metadata.subjects.all %}
@@ -766,8 +816,8 @@
             $("#toolbar-labels-dropdown ul :not(.persist)").empty();
 
             var labels = $("#table-user-labels td.user-label");
-            for (var i = 0; i < labels.length; i++) {
-                var curr = $(labels[i]).text();
+            for (var h = 0; h < labels.length; h++) {
+                var curr = $(labels[h]).text();
 
                 $("#user-labels-left").append(
                         '<li class="list-group-item">' +
@@ -781,7 +831,7 @@
 
                 for (var i = 0; i < dropdowns.length; i++) {
                     var res_id = $(dropdowns[i]).attr("data-resource-id");
-                    var formID = "form-" + i + "-" + res_id;
+                    var formID = "form-" + i + "-" + h + "-" + res_id;
                     $(dropdowns[i]).append(
                             '<li>'+
                                 '<label class="checkbox"><input data-form-type="toggle-label" data-form-id="' + formID + '" type="checkbox" value="' + curr + '">' + curr + '</label>'+
@@ -815,6 +865,21 @@
                 $(".inline-dropdown input[type='checkbox']").change(updateLabelCount);
             }
 
+            // Check checkboxes for labels currently in the resource
+            for (var i = 0; i < dropdowns.length; i++) {
+                if ($(dropdowns[i]).attr("data-initial-labels")) {
+                    var initialLabels = $(dropdowns[i]).attr("data-initial-labels");
+                    initialLabels = initialLabels.split(",");
+                    for (var j = 0; j < initialLabels.length; j++) {
+                        var currLabel = $(dropdowns[i]).find("input[type='checkbox'][value='" + initialLabels[j] + "']")
+                        currLabel.prop("checked", true);
+                        currLabel.closest("li").find("form input[name='action']").val("DELETE");
+                    }
+                    $(dropdowns[i]).removeAttr("data-initial-labels");
+                    $(dropdowns[i]).closest("tr").find(".btn-inline-label").addClass("has-labels");
+                }
+            }
+
             if (labels.length == 0) {
                 $("#user-labels-left").append(
                         '<h5><i>No labels found.</i></h5>'
@@ -836,13 +901,15 @@
 
             $(".inline-dropdown input[type='checkbox']").change(label_ajax_submit);
 
-            $("#toolbar-labels-dropdown input[type='checkbox']").click(function(){
-                var inlineCheckboxes = $(".row-selector:checked").parent().find(".inline-dropdown input[type='checkbox'][value='" + $(this).val() + "']")
+            $("#toolbar-labels-dropdown input[type='checkbox']").change(function(){
+                var inlineCheckboxes = $(".row-selector:checked").parent().find(".inline-dropdown input[type='checkbox'][value='" + $(this).val() + "']");
                 if ($(this).prop("checked") == true) {
                     inlineCheckboxes.prop("checked", true);
+                    inlineCheckboxes.change();
                 }
                 else {
                     inlineCheckboxes.prop("checked", false);
+                    inlineCheckboxes.change();
                 }
 
                 updateLabelCount();
@@ -889,7 +956,7 @@
         function updateLabelCount() {
             $("#labels input[data-label]").parent().parent().find(".badge").text("0");
             $("#toolbar-labels-dropdown input[type='checkbox']").prop("checked", true);
-            $(".btn-inline-label").css("color", "");
+            $(".btn-inline-label").removeClass("has-labels");
             var items = $(".inline-dropdown input[type='checkbox']");
             var collection = [];
             for (var i = 0; i < items.length; i++) {
@@ -900,7 +967,7 @@
                     }
                     collection[label]++;
 
-                    $(items[i]).closest("tr").find(".btn-inline-label").css("color", "#0A91AB");
+                    $(items[i]).closest("tr").find(".btn-inline-label").addClass("has-labels");
                 }
                 else {
                     // Update state of toolbar label chekcboxes
