Adding to my resources from the resource landing page

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -266,6 +266,8 @@
                                 <td>Editable</td>
                             {% elif res.viewable %}
                                 <td>Viewable</td>
+                            {% else %}
+                                <td></td>
                             {% endif %}
                             <td class="col-labels">
                                 {% for label in res.labels %}
