--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -87,33 +87,63 @@
         </div>
         {#        ======= Top right buttons =======#}
         <div class="col-sm-12">
-                <div class="lined-wrapper"></div>
-        {% if not metadata_form %}
-            {% if page.perms.change %}
-                <div class="custom-btn-toolbar">
-                    <form class="inline" action="{{ cm.get_absolute_url }}" method="post">
-                        {% csrf_token %}
-                        {% if page.perms.delete %}
-                            <a id="delete" data-toggle="modal" data-target="#delete-resource-dialog">
-                                <span data-toggle="tooltip" data-placement="auto" title="Delete this resource"
-                                      class="glyphicon glyphicon-trash icon-button btn-remove"></span>
-                            </a>
+            <div class="lined-wrapper"></div>
+            {% if not metadata_form %}
+                {% if page.perms.change %}
+                    <div class="custom-btn-toolbar">
+
+                        {% if is_mine %}
+                            <form class="inline" data-id="form-add-to-my-resources"
+                                  action="/hsapi/_internal/{{ cm.short_id }}/label-resource-action/"
+                                  method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <input type="hidden" name="label_type" value="MINE">
+                                    <input type="hidden" name="action" value="DELETE">
+                                    <button id="btnMyResources" data-toggle="tooltip" data-placement="auto"
+                                            title="Remove from my resources" data-form-id="form-add-to-my-resources"
+                                            class="glyphicon glyphicon-inbox icon-button"></button>
+                                </div>
+                            </form>
+                        {% else %}
+                            <form class="inline" data-id="form-add-to-my-resources"
+                                  action="/hsapi/_internal/{{ cm.short_id }}/label-resource-action/"
+                                  method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <input type="hidden" name="label_type" value="MINE">
+                                    <input type="hidden" name="action" value="CREATE">
+                                    <button id="btnMyResources" data-toggle="tooltip" data-placement="auto"
+                                            title="Add to my resources" data-form-id="form-add-to-my-resources"
+                                            class="glyphicon glyphicon-inbox icon-button"></button>
+                                </div>
+                            </form>
                         {% endif %}
-                        <input name="resource-mode" type="hidden" value="edit"/>
-                        <button id="edit-metadata" type="submit" data-toggle="tooltip" data-placement="auto"
-                                title="Edit this resource"
-                                class="glyphicon glyphicon-pencil icon-button btn-edit"></button>
-                    </form>
+
+
+                        <form class="inline" action="{{ cm.get_absolute_url }}" method="post">
+                            {% csrf_token %}
+                            {% if page.perms.delete %}
+                                <a id="delete" data-toggle="modal" data-target="#delete-resource-dialog">
+                                    <span data-toggle="tooltip" data-placement="auto" title="Delete this resource"
+                                          class="glyphicon glyphicon-trash icon-button btn-remove"></span>
+                                </a>
+                            {% endif %}
+                            <input name="resource-mode" type="hidden" value="edit"/>
+                            <button id="edit-metadata" type="submit" data-toggle="tooltip" data-placement="auto"
+                                    title="Edit this resource"
+                                    class="glyphicon glyphicon-pencil icon-button btn-edit"></button>
+                        </form>
+                    </div>
+                {% endif %}
+            {% else %}
+                <div class="custom-btn-toolbar">
+                    <a href="{{ cm.get_absolute_url }}">
+                            <span data-toggle="tooltip" data-placement="auto" title="View resource"
+                                  class="glyphicon glyphicon-circle-arrow-left icon-button btn-edit"></span>
+                    </a>
                 </div>
             {% endif %}
-        {% else %}
-            <div class="custom-btn-toolbar">
-                <a href="{{ cm.get_absolute_url }}">
-                        <span data-toggle="tooltip" data-placement="auto" title="View resource"
-                              class="glyphicon glyphicon-circle-arrow-left icon-button btn-edit"></span>
-                </a>
-            </div>
-        {% endif %}
         </div>
 
 
@@ -2384,6 +2414,31 @@
                 }
             });
 
+            function label_ajax_submit() {
+                var el = $(this);
+                var dataFormID = el.attr("data-form-id")
+                var formID = $("form[data-id='" + dataFormID + "']");
+                var form = $(formID);
+                var datastring = form.serialize();
+                var url = form.attr('action');
+
+                $.ajax({
+                    type: "POST",
+                    url: url,
+                    dataType: 'html',
+                    data: datastring,
+                    success: function (result) {
+                        console.log(result);
+                        console.log("Added to my resources")
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+
+                    }
+                });
+                //don't submit the form
+                return false;
+            }
+
             // Prevents form submission when pressing the enter key on the search box.
             $('#id_user-autocomplete').keypress(function(e){
                 e = e || event;
@@ -3052,7 +3107,8 @@
             }
 
             $(document).ready(function () {
-                 $("#coverageTabBtn").click(function(){
+                $("#btnMyResources").click(label_ajax_submit);
+                $("#coverageTabBtn").click(function(){
                     setTimeout( function(){
                         // Call resize to re-render the map since it wasn't visible during load.
                         google.maps.event.trigger(coverageMap, "resize");
