changed class name to be more readable

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -9,15 +9,15 @@
             <input class="btn btn-default" type="button" value="clear all" onclick="clearAllFaceted()">
             <span id="color-scheme">
                 <svg width='180' height='24'>
-                    <rect class="YlGnBu-q0-9-fill" x="0" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q1-9-fill" x="20" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q2-9-fill" x="40" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q3-9-fill" x="60" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q4-9-fill" x="80" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q5-9-fill" x="100" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q6-9-fill" x="120" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q7-9-fill" x="140" width="20" height="20"></rect>
-                    <rect class="YlGnBu-q8-9-fill" x="160" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-1-fill" x="0" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-2-fill" x="20" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-3-fill" x="40" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-4-fill" x="60" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-5-fill" x="80" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-6-fill" x="100" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-7-fill" x="120" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-8-fill" x="140" width="20" height="20"></rect>
+                    <rect class="YellowGreenBlue-colormap-band-9-fill" x="160" width="20" height="20"></rect>
                 </svg>
             </span>
             {% for key, values in facets.fields.items %}
@@ -62,23 +62,23 @@
                                         <li class="list-group-item">
                                             <input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}
                                                 {% if item.1 >= 2 and item.1 <= 4 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q0-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-1">
                                                 {% elif item.1 > 4 and item.1 <= 6 %}
-                                                     <span class="label label-default label-pill pull-right badge YlGnBu-q1-9">
+                                                     <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-2">
                                                 {% elif item.1 > 6 and item.1 <= 10 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q2-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-3">
                                                 {% elif item.1 > 10 and item.1 <= 18 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q3-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-4">
                                                 {% elif item.1 > 18 and item.1 <= 32 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q4-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-5">
                                                 {% elif item.1 > 32 and item.1 <= 57 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q5-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-6">
                                                 {% elif item.1 > 57 and item.1 <= 100 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q6-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-7">
                                                 {% elif item.1 > 100 and item.1 <= 178 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q7-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-8">
                                                 {% elif item.1 > 178 %}
-                                                    <span class="label label-default label-pill pull-right badge YlGnBu-q8-9">
+                                                    <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
                                                 {% endif %}{{ item.1 }}
                                             </span>
                                         </li>
